fix issue with thumbnail borders being light in dark mode

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -123,6 +123,11 @@ article.single .bleb {
   a:visited {
     color: #bc73ff;
   }
+  
+  .img-thumbnail {
+    background-color: #222;
+    border-color: #444;
+  }
 
   pre {
     background: #373737;
